# fotobuch

./: .gitignore  404.html  CONFIG_ENHANCEMENT.md  Cargo.toml  LICENSE  README.md  RELEASE_PLAN.md  TODO.md  Todo.md  big_canvas.json  book_open_problems.md  book_suggestions.md  build.rs  centered_test.json  cliff.toml  commands.html  concepts.html  configuration.html  cover-modes.html  huge_canvas.json  index.html  installation.html  known_limitations.html  print.html  printing.html  pyproject.toml  quickstart.html  searcher-c2a407aa.js  searchindex-23bc70c8.js  searchindex-3245fe9e.js  searchindex-34e43021.js  searchindex-40322265.js  searchindex-4ee6fcdf.js  searchindex-6fb82937.js  searchindex-93b9b192.js  searchindex-afd89f27.js  searchindex-bad6f84c.js  searchindex-da5b6455.js  searchindex-ee43bea2.js  searchindex-f82a4440.js  (+11 more)
.claude/: 1_overview.md  2_projektstruktur.md  3_rust-module.md  4_python-package.md  5_environment-setup.md  6_json-schnittstelle.md  7_optimierung.md  8_workflow.md  9_roadmap.md  CLAUDE.md  README.md  book_layout_solver_plan.md  code_smells_analysis.md  crossover_implementation.md  evolution_refactoring_plan.md  plan.md  settings.local.json  slicing_tree_ga_algorithm.md  solver_refactoring_plan.md  workflow_and_cache_tasks.md
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
cli/: cli.rs  generate_cli_docs.rs  reference-generated.html
cli/cli/: add.rs  build.rs  config.rs  history.rs  page.rs  place.rs  project.rs  rebuild.rs  remove.rs  status.rs  undo.rs
cli/cli/page/: handlers.rs  parse_api.rs  parser.rs  tests.rs
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md  commands.md  concepts.md  configuration.md  cover-modes.md  installation.md  known_limitations.md  printing.md  quickstart.md  template.md
docs/design/: README.md  cover_workflow_design.md  mip-solver-split.md  page_layout_solver_refactoring.md  workflow_and_cache_tasks.md  yaml-scheme.md
docs/design/book_layout_solver_mip/: book_layout_solver.md  mip-solver-split.md  page_assignment_mip.typ
docs/design/cli/: 10_project_list.md  11_project_switch.md  (+19 more)
docs/helper/: build_cover_modes.py
python/docs/: solver_model.typ
src/: cache.rs  cli.rs  cli_backup.rs  commands.rs  converter.rs  dto_models.rs  git.rs  input.rs  lib.rs  main.rs  main_old.rs  model.rs  models.rs  output.rs  project.rs  scanner.rs  solver.rs  state_manager.rs  test_fixtures.rs  typst_export.rs  undo_stack.rs
src/cache/: common.rs  final_cache.rs  preview.rs
src/cli/: add.rs  build.rs  config.rs  history.rs  page.rs  place.rs  project.rs  rebuild.rs  remove.rs  status.rs
src/commands/: add.rs  build.rs  config.rs  history.rs  new.rs  page.rs  place.rs  project.rs  rebuild.rs  remove.rs  status.rs  undo.rs  unplace.rs
src/dto_models/: config.rs  layout.rs  photos.rs  state.rs
src/input/: loader.rs  metadata.rs  photos.rs  scan.rs  scanner.rs  xmp.rs
src/model/: layout.rs  mod.rs  photo.rs
src/models/: book_layout.rs  canvas.rs  config.rs  ga_config.rs  layout.rs  mod.rs  photo.rs  photo_group.rs  photo_info.rs  request.rs  weights.rs
src/output/: _json_old.rs  _typst_old.rs  json.rs  typst.rs
src/project/: git.rs  state.rs
src/solver/: book_layout_solver.rs  cover_solver.rs  data_models.rs  fitness.rs  ga.rs  ga_solver.rs  layout_solver.rs  page_layout.rs  page_layout_solver.rs  prelude.rs  solver.rs  tree.rs
src/state_manager/: page_change_detection.rs  state_diff.rs
src/templates/: fotobuch.typ
test_photos/: artificial_input_generator.py
tests/: add_test.rs  build_test.rs  cli_integration.rs  common.rs  config_test.rs  history_test.rs  integration_test.rs  place_test.rs  project_list_test.rs  project_new_test.rs  project_switch_test.rs  rebuild_test.rs  remove_test.rs  status_test.rs
tests/tools/: artificial_input_generator.py  pyproject.toml
(+145 files in other folders)
