[package]
name = "fotobuch"
version = "0.1.0"
edition = "2024"
default-run = "fotobuch"

[[bin]]
name = "fotobuch"
path = "cli/main.rs"

[lib]
name = "fotobuch"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time parsing for folder names
chrono = { version = "0.4", features = ["serde"] }

# Image metadata (EXIF) and dimensions
kamadak-exif = "0.6"
image = "0.25"

# Typst compiler + PDF export
typst = "0.14"
typst-pdf = "0.14"
typst-kit = { version = "0.14", features = ["fonts", "embed-fonts"] }
comemo = "0.5"

# PDF post-processing (TrimBox/BleedBox)
lopdf = "0.35"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Genetic algorithm dependencies
rand = "0.8"
rayon = "1"
crossbeam = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Regex for parsing dates from folder names
regex = "1.10"

# Fast hashing for duplicate detection
blake3 = "1.5"

# MIP solver
good_lp = { version = "1", features = ["highs"], default-features = false }

# Git integration
git2 = { version = "0.20", default-features = false }

[[bin]]
name = "generate-cli-docs"
path = "cli/generate_cli_docs.rs"
required-features = ["cli-docs"]

[features]
cli-docs = ["dep:clap-markdown"]

[dependencies.clap-markdown]
version = "0.1"
optional = true

[dev-dependencies]
approx = "0.5"
assert_cmd = "2"
predicates = "3"
proptest = "1"
rand_chacha = "0.3"
tempfile = "3.10"
